Refactor tests for model